fix [#32374] Curve compositor UI drawing glitch copy the curve for the compositor.